@@ -1,21 +1,12 @@
-FROM alpine:3.11.3 as build
+FROM maven:3-eclipse-temurin-8 as BUILD
 
-RUN apk --no-cache add openjdk11
-RUN apk --no-cache add maven
+COPY . /usr/src/app
+RUN mvn --batch-mode -f /usr/src/app/pom.xml clean package
 
-RUN /usr/lib/jvm/default-jvm/bin/jlink \
-    --compress=2 \
-    --module-path /usr/lib/jvm/default-jvm/jmods \
-    --add-modules java.base,java.logging,java.xml,jdk.unsupported,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-    --output /jdk-minimal
+FROM eclipse-temurin:8-jre
+ENV PORT 8086
+EXPOSE 8086
+COPY --from=BUILD /usr/src/app/target /opt/target
+WORKDIR /opt/target
 
-WORKDIR /build
-COPY pom.xml pom.xml
-RUN mvn dependency:go-offline
-# build
-COPY src src
-
-FROM openjdk:20-jdk
-MAINTAINER "smeefie"
-COPY target/ProducerPrototype-0.0.1-SNAPSHOT.jar producer-prototype-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "producer-prototype-0.0.1-SNAPSHOT.jar"]
+CMD ["/bin/bash", "-c", "find -type f -name '*-SNAPSHOT.jar' | xargs java -jar"]
